--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "cmath": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "tuple": "cpp",
+        "xstring": "cpp",
+        "vector": "cpp"
     }
 }
