--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,67 +1,4 @@
 {
-  "files.associations": {
-    "cmath": "cpp",
-    "xtree": "cpp",
-    "tuple": "cpp",
-    "xstring": "cpp",
-    "vector": "cpp",
-    "stdexcept": "cpp",
-    "algorithm": "cpp",
-    "atomic": "cpp",
-    "bit": "cpp",
-    "cctype": "cpp",
-    "clocale": "cpp",
-    "compare": "cpp",
-    "concepts": "cpp",
-    "cstddef": "cpp",
-    "cstdint": "cpp",
-    "cstdio": "cpp",
-    "cstdlib": "cpp",
-    "cstring": "cpp",
-    "ctime": "cpp",
-    "cwchar": "cpp",
-    "deque": "cpp",
-    "exception": "cpp",
-    "initializer_list": "cpp",
-    "ios": "cpp",
-    "iosfwd": "cpp",
-    "iostream": "cpp",
-    "istream": "cpp",
-    "iterator": "cpp",
-    "limits": "cpp",
-    "map": "cpp",
-    "memory": "cpp",
-    "new": "cpp",
-    "numeric": "cpp",
-    "optional": "cpp",
-    "ostream": "cpp",
-    "set": "cpp",
-    "streambuf": "cpp",
-    "string": "cpp",
-    "system_error": "cpp",
-    "type_traits": "cpp",
-    "typeinfo": "cpp",
-    "utility": "cpp",
-    "xfacet": "cpp",
-    "xiosbase": "cpp",
-    "xlocale": "cpp",
-    "xlocinfo": "cpp",
-    "xlocnum": "cpp",
-    "xmemory": "cpp",
-    "xstddef": "cpp",
-    "xtr1common": "cpp",
-    "xutility": "cpp",
-    "array": "cpp",
-    "*.tcc": "cpp",
-    "cstdarg": "cpp",
-    "cwctype": "cpp",
-    "unordered_map": "cpp",
-    "functional": "cpp",
-    "memory_resource": "cpp",
-    "random": "cpp",
-    "string_view": "cpp",
-    "numbers": "cpp"
-  },
   "C_Cpp_Runner.cCompilerPath": "gcc",
   "C_Cpp_Runner.cppCompilerPath": "g++",
   "C_Cpp_Runner.debuggerPath": "gdb",
@@ -117,5 +54,6 @@
   "C_Cpp_Runner.useUndefinedSanitizer": false,
   "C_Cpp_Runner.useLeakSanitizer": false,
   "C_Cpp_Runner.showCompilationTime": false,
-  "C_Cpp_Runner.useLinkTimeOptimization": false
+  "C_Cpp_Runner.useLinkTimeOptimization": false,
+  "C_Cpp_Runner.msvcSecureNoWarnings": false
 }
